--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -8,8 +8,65 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+          <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-<h1> Hello world</h1>
+    <form action="/create" method="POST">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Name</label>
+          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter name" name="name">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Age</label>
+          <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Age" name="age">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Pass</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Pass" name="pass">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Email</label>
+            <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Email" name="email">
+          </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+
+     
+      
+<hr />
+<hr />
+<hr />
+   
+<table class="table table-dark">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Id</th>
+        <th scope="col">Name</th>
+        <th scope="col">Pass</th>
+        <th scope="col">Age</th>
+        <th scope="col">Email</th>
+      </tr>
+    </thead>
+   
+        <% for(var i=0; i < data.length; i++) { %>
+      <tr>
+        <td scope="row"><%= i %></td>
+        <td><%= data[i].id %></td>
+     <td><%= data[i].name %></td>
+     <td><%= data[i].pass %></td>
+     <td><%= data[i].age %></td>
+     <td><%= data[i].email %></td>
+     <td><a href="/delete/<%= data[i].id %>">Xóa</a></td> 
+     <td><a href="/show/<%= data[i].id %>">Sửa</a> </td>
+      </tr>
+      <% } %>
+ 
+  </table>
+
+
 </body>
 </html>
